<resources>
    <string name="app_name">RxJava2-Android-Samples</string>
    <string name="doSomeWork">doSomeWork</string>
    <string name="operators">Operators</string>
    <string name="networking">Networking</string>
    <string name="cache">Cache</string>
    <string name="pagination">Pagination</string>
    <string name="search">Search</string>
    <string name="simple">Simple</string>
    <string name="map">Map</string>
    <string name="zip">Zip</string>
    <string name="disposable">Disposable</string>
    <string name="take">Take</string>
    <string name="timer">Timer</string>
    <string name="interval">Interval</string>
    <string name="SingleObserver">SingleObserver</string>
    <string name="CompletableObserver">CompletableObserver</string>
    <string name="Flowable">Flowable</string>
    <string name="reduce">Reduce</string>
    <string name="buffer">Buffer</string>
    <string name="filter">Filter</string>
    <string name="skip">Skip</string>
    <string name="scan">Scan</string>
    <string name="replay">Replay</string>
    <string name="concat">Concat</string>
    <string name="merge">Merge</string>
    <string name="defer">Defer</string>
    <string name="distinct">Distinct</string>
    <string name="last">Last</string>
    <string name="replay_subject">ReplaySubject</string>
    <string name="publish_subject">PublishSubject</string>
    <string name="behavior_subject">BehaviorSubject</string>
    <string name="async_subject">AsyncSubject</string>
    <string name="throttle_last">ThrottleLast</string>
    <string name="debounce">Debounce</string>
    <string name="window">Window</string>
    <string name="delay">delay</string>
    <string name="throttle_first">ThrottleFirst</string>
    <string name="flatMapAndFilter">flatMapAndFilter</string>
    <string name="flatMap">flatMap</string>
    <string name="flatMapWithZip">flatMapWithZip</string>
    <string name="click_me">Click Me</string>
    <string name="rx_bus">RxBus</string>
    <string name="compose">Compose for reusable</string>
    <string name="result">Result</string>
    <string name="switch_map">Switch Map</string>
    <string name="take_while">Take While</string>
    <string name="take_until">Take Until</string>

    <!-- Photo editor -->
    <string name="photo_editor">Photo Editor</string>
    <string name="editor_title">Photo editor</string>
    <string name="editor_save">Save</string>
    <string name="editor_share">Share</string>
    <string name="editor_empty_hint">Pick a photo, then recolour it, add captions, stickers and a sound.</string>
    <string name="editor_pick_photo">Pick a photo</string>
    <string name="editor_pick_sticker">Pick an image to add</string>
    <string name="editor_pick_sound">Pick a sound</string>
    <string name="editor_pick_photo_first">Pick a photo first</string>
    <string name="editor_no_picker">No app available to pick a file</string>
    <string name="editor_load_failed">Could not open the selected file</string>
    <string name="editor_saved">Saved to your gallery</string>
    <string name="editor_save_failed">Could not save the picture</string>
    <string name="editor_storage_permission_needed">Storage permission is needed to save the picture</string>

    <string name="editor_tool_photo">Photo</string>
    <string name="editor_tool_filter">Filter</string>
    <string name="editor_tool_adjust">Adjust</string>
    <string name="editor_tool_text">Text</string>
    <string name="editor_tool_sticker">Image</string>
    <string name="editor_tool_sound">Sound</string>

    <string name="editor_action_edit">Edit</string>
    <string name="editor_action_duplicate">Duplicate</string>
    <string name="editor_action_delete">Delete</string>

    <string name="editor_adjust_brightness">Brightness</string>
    <string name="editor_adjust_contrast">Contrast</string>
    <string name="editor_adjust_saturation">Saturation</string>
    <string name="editor_adjust_warmth">Warmth</string>
    <string name="editor_adjust_reset">Reset</string>

    <string name="editor_text_add_title">Add text</string>
    <string name="editor_text_edit_title">Edit text</string>
    <string name="editor_text_hint">Your caption</string>
    <string name="editor_text_size">Size</string>
    <string name="editor_text_color">Colour</string>

    <string name="editor_sound_empty">No sound attached</string>
    <string name="editor_sound_default_title">Sound</string>
    <string name="editor_sound_pick">Choose</string>
    <string name="editor_sound_play">Play</string>
    <string name="editor_sound_pause">Pause</string>
    <string name="editor_sound_remove">Remove</string>
    <string name="editor_sound_failed">Could not play this sound</string>

    <string name="filter_original">Original</string>
    <string name="filter_mono">Mono</string>
    <string name="filter_noir">Noir</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_vivid">Vivid</string>
    <string name="filter_cool">Cool</string>
    <string name="filter_warm">Warm</string>
    <string name="filter_fade">Fade</string>
    <string name="filter_invert">Invert</string>
</resources>
