<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/editor_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editor_panel"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/editor_spacing"
        android:paddingRight="@dimen/editor_spacing">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/editor_title"
            android:textColor="@color/editor_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/editor_save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_save"
            android:textColor="@color/editor_accent" />

        <Button
            android:id="@+id/editor_share"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_share"
            android:textColor="@color/editor_accent" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <gooner.demo.tranning_rxandroid.editor.EditorCanvasView
            android:id="@+id/editor_canvas"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/editor_empty_state"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/editor_spacing">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/editor_empty_hint"
                android:textColor="@color/editor_text_secondary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/editor_empty_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/editor_spacing"
                android:text="@string/editor_tool_photo"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_selection_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="@dimen/editor_spacing"
            android:background="@color/editor_panel_translucent"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/editor_action_edit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_action_edit"
                android:textColor="@color/editor_text" />

            <Button
                android:id="@+id/editor_action_duplicate"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_action_duplicate"
                android:textColor="@color/editor_text" />

            <Button
                android:id="@+id/editor_action_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_action_delete"
                android:textColor="@color/editor_accent" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/editor_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editor_panel">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/editor_panel_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/editor_spacing_small"
            android:paddingTop="@dimen/editor_spacing_small"
            android:paddingRight="@dimen/editor_spacing_small"
            android:paddingBottom="@dimen/editor_spacing_small"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/editor_panel_adjust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/editor_spacing_small"
            android:visibility="gone">

            <TextView
                style="@style/EditorSliderLabel"
                android:text="@string/editor_adjust_brightness" />

            <SeekBar
                android:id="@+id/editor_seek_brightness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="200" />

            <TextView
                style="@style/EditorSliderLabel"
                android:text="@string/editor_adjust_contrast" />

            <SeekBar
                android:id="@+id/editor_seek_contrast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="150" />

            <TextView
                style="@style/EditorSliderLabel"
                android:text="@string/editor_adjust_saturation" />

            <SeekBar
                android:id="@+id/editor_seek_saturation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="200" />

            <TextView
                style="@style/EditorSliderLabel"
                android:text="@string/editor_adjust_warmth" />

            <SeekBar
                android:id="@+id/editor_seek_warmth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100" />

            <Button
                android:id="@+id/editor_reset_adjust"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/editor_adjust_reset"
                android:textColor="@color/editor_accent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/editor_panel_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/editor_spacing_small"
            android:visibility="gone">

            <TextView
                android:id="@+id/editor_sound_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/editor_sound_empty"
                android:textColor="@color/editor_text" />

            <Button
                android:id="@+id/editor_sound_pick"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_sound_pick"
                android:textColor="@color/editor_accent" />

            <Button
                android:id="@+id/editor_sound_play"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/editor_sound_play"
                android:textColor="@color/editor_text" />

            <Button
                android:id="@+id/editor_sound_remove"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/editor_sound_remove"
                android:textColor="@color/editor_text_secondary" />

        </LinearLayout>

    </FrameLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/editor_toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editor_tool_photo"
                style="@style/EditorToolButton"
                android:text="@string/editor_tool_photo" />

            <Button
                android:id="@+id/editor_tool_filter"
                style="@style/EditorToolButton"
                android:text="@string/editor_tool_filter" />

            <Button
                android:id="@+id/editor_tool_adjust"
                style="@style/EditorToolButton"
                android:text="@string/editor_tool_adjust" />

            <Button
                android:id="@+id/editor_tool_text"
                style="@style/EditorToolButton"
                android:text="@string/editor_tool_text" />

            <Button
                android:id="@+id/editor_tool_sticker"
                style="@style/EditorToolButton"
                android:text="@string/editor_tool_sticker" />

            <Button
                android:id="@+id/editor_tool_sound"
                style="@style/EditorToolButton"
                android:text="@string/editor_tool_sound" />

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
