<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/editor_spacing">

        <EditText
            android:id="@+id/editor_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editor_text_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/editor_spacing"
            android:text="@string/editor_text_size"
            android:textColor="?android:attr/textColorSecondary" />

        <SeekBar
            android:id="@+id/editor_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editor_text_color"
            android:textColor="?android:attr/textColorSecondary" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/editor_text_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </HorizontalScrollView>

    </LinearLayout>

</ScrollView>
